added dashboard, svg icons and readme

--- a/src/Components/Signup/Signup.css
+++ b/src/Components/Signup/Signup.css
@@ -52,3 +52,15 @@
   align-self: flex-start;
   cursor: pointer;
 }
+.input_password {
+  position: relative;
+}
+.input_password input {
+  width: 100%;
+}
+.eye_icon {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  cursor: pointer;
+}
